--- a/Ava.SocketTool/Views/MainView.axaml
+++ b/Ava.SocketTool/Views/MainView.axaml
@@ -86,7 +86,7 @@
                                 IsVisible="{Binding CurrentSelectModel.Ip,Converter={x:Static StringConverters.IsNullOrEmpty}}">
                             <StackPanel Orientation="Vertical" Spacing="30">
                                 <TextBlock Text="欢迎使用Ava.SockerTool调试工具" Classes="Success" HorizontalAlignment="Center" FontSize="18" />
-                                <TextBlock Text="https://gitee.com/CRole/ava.-socket-tool" Classes="Warning" HorizontalAlignment="Center" />
+                                <TextBlock Text="https://github.com/wmchuang/Ava.SocketTool" Classes="Warning" HorizontalAlignment="Center" />
                             </StackPanel>
 
                         </Border>
