--- a/Ava.SocketTool/Views/Dialog/CreateNodeView.axaml
+++ b/Ava.SocketTool/Views/Dialog/CreateNodeView.axaml
@@ -5,6 +5,7 @@
              xmlns:vm="clr-namespace:Ava.SocketTool.ViewModels.Dialog"
              xmlns:dataTemplate="clr-namespace:Ava.SocketTool.DataTemplate"
              xmlns:model="clr-namespace:Ava.SocketTool.Models.Dialog"
+             xmlns:cv="clr-namespace:Ava.SocketTool.Convert"
              mc:Ignorable="d" 
              d:DesignWidth="300" d:DesignHeight="230"
              Width="300" Height="230"
@@ -31,7 +32,7 @@
                 <StackPanel Orientation="Vertical" VerticalAlignment="Center" HorizontalAlignment="Center" Spacing="20">
                     <StackPanel Orientation="Horizontal" Margin="20 0">
                         <TextBlock Text="    对方IP: " VerticalAlignment="Center" />
-                        <TextBox Width="150" Text="{Binding Ip}" x:Name="IP"></TextBox>
+                        <TextBox Width="150" Text="{Binding Ip,Converter={x:Static cv:IpAddressToIpConverter.Instance}}" x:Name="IP"></TextBox>
                     </StackPanel>
                     <StackPanel Orientation="Horizontal" Margin="20 0">
                         <TextBlock Text="对方端口: " VerticalAlignment="Center" />
