--- a/Ava.SocketTool/Views/MainView.axaml
+++ b/Ava.SocketTool/Views/MainView.axaml
@@ -62,7 +62,7 @@
                 <TreeView ItemsSource="{Binding TreeDataList}" x:Name="TreeView">
                     <TreeView.ItemTemplate>
                         <TreeDataTemplate ItemsSource="{Binding Children}">
-                            <TextBlock Text="{Binding Name}" FontSize="12" />
+                            <TextBlock Text="{Binding DisplayName}" FontSize="12" />
                         </TreeDataTemplate>
                     </TreeView.ItemTemplate>
 
@@ -80,10 +80,10 @@
                 <Grid Grid.Column="2">
                     <Grid>
                         <page:HandleView 
-                            IsVisible="{Binding CurrentSelectModel.Ip,Converter={x:Static StringConverters.IsNotNullOrEmpty}}"/>
+                            IsVisible="{Binding CurrentSelectModel.Key,Converter={x:Static StringConverters.IsNotNullOrEmpty}}"/>
                         
                         <Border Theme="{StaticResource CardBorder}" VerticalAlignment="Top"
-                                IsVisible="{Binding CurrentSelectModel.Ip,Converter={x:Static StringConverters.IsNullOrEmpty}}">
+                                IsVisible="{Binding CurrentSelectModel.Key,Converter={x:Static StringConverters.IsNullOrEmpty}}">
                             <StackPanel Orientation="Vertical" Spacing="30">
                                 <TextBlock Text="欢迎使用Ava.SockerTool调试工具" Classes="Success" HorizontalAlignment="Center" FontSize="18" />
                                 <TextBlock Text="https://github.com/wmchuang/Ava.SocketTool" Classes="Warning" HorizontalAlignment="Center" />
