--- a/Ava.SocketTool/Views/Dialog/ErrorDialogView.axaml
+++ b/Ava.SocketTool/Views/Dialog/ErrorDialogView.axaml
@@ -2,7 +2,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             mc:Ignorable="d" 
+             mc:Ignorable="d"
              d:DesignWidth="250" d:DesignHeight="170"
              Width="250" Height="170"
              BorderThickness="1"
@@ -10,15 +10,16 @@
              Background="{DynamicResource BorderCardBackground}"
              x:Class="Ava.SocketTool.Views.Dialog.ErrorDialogView"
              Padding="20">
-    
-    <Grid>
-        <StackPanel Orientation="Vertical" Spacing="50" >
-            <TextBlock Text="发生错误" x:Name="ErrorMsg"  Classes="Danger  H4" TextWrapping="Wrap"/>
-            <Button Classes="Danger" HorizontalAlignment="Center" 
-                    Theme="{DynamicResource SolidButton}" Content="确定"
-                    Width="80"
-                    x:Name="Close" Click="Close_OnClick"/>
-        </StackPanel>
-      
+
+    <Grid RowDefinitions="2.5*,*">
+        <TextBlock Text="发生错误" x:Name="ErrorMsg" Classes="Danger  H4" TextWrapping="Wrap" />
+
+
+        <Button Grid.Row="1" Margin="0 0 20 0" Classes="Danger" HorizontalAlignment="Center"          
+                VerticalAlignment="Center"
+                Theme="{DynamicResource SolidButton}" Content="确定"
+                Width="80"
+                x:Name="Close" Click="Close_OnClick" />
+
     </Grid>
 </UserControl>
