--- a/Ava.SocketTool/Views/MainView.axaml
+++ b/Ava.SocketTool/Views/MainView.axaml
@@ -25,7 +25,7 @@
         <Grid RowDefinitions="50,*">
             <Border Theme="{StaticResource CardBorder}" VerticalAlignment="Center"
                     Padding="5">
-                <Grid VerticalAlignment="Center" ColumnDefinitions="*, Auto">
+                <Grid VerticalAlignment="Center" ColumnDefinitions="* Auto ,Auto">
                     <StackPanel Orientation="Horizontal">
                         <Button Content="创建" Classes="Primary" Margin="20 0"
                                 Command="{Binding CreateCommand}"
@@ -34,8 +34,13 @@
                                 Command="{Binding DeleteCommand}" />
                     </StackPanel>
 
+                    <ComboBox  Grid.Column="1" Width="100" SelectedIndex="0" SelectionChanged="SelectingItemsControl_OnSelectionChanged">
+                        <ComboBoxItem>GBK</ComboBoxItem>
+                        <ComboBoxItem>UTF-8</ComboBoxItem>
+                    </ComboBox>
+                    
                     <ToggleSwitch
-                        Grid.Column="1"
+                        Grid.Column="2"
                         Padding="4"
                         IsCheckedChanged="ToggleButton_OnIsCheckedChanged"
                         Theme="{DynamicResource ButtonToggleSwitch}">
