--- a/Ava.SocketTool/Views/Dialog/CreateNodeView.axaml
+++ b/Ava.SocketTool/Views/Dialog/CreateNodeView.axaml
@@ -33,7 +33,7 @@
                 <StackPanel Orientation="Vertical" VerticalAlignment="Center" HorizontalAlignment="Center" Spacing="20">
                     <StackPanel Orientation="Horizontal" Margin="20 0">
                         <TextBlock Text="    对方IP: " VerticalAlignment="Center" />
-                        <TextBox Width="150" Text="{Binding Ip,Converter={x:Static cv:IpAddressToIpConverter.Instance}}" x:Name="IP"></TextBox>
+                        <TextBox Width="150" Text="{Binding Ip}" x:Name="IP"></TextBox>
                     </StackPanel>
                     <StackPanel Orientation="Horizontal" Margin="20 0">
                         <TextBlock Text="对方端口: " VerticalAlignment="Center" />
@@ -48,7 +48,7 @@
                 <StackPanel Orientation="Vertical" VerticalAlignment="Center" HorizontalAlignment="Center" Spacing="20">
                     <StackPanel Orientation="Horizontal" Margin="20 0">
                         <TextBlock Text="    对方IP: " VerticalAlignment="Center" />
-                        <TextBox Width="150" Text="{Binding Ip,Converter={x:Static cv:IpAddressToIpConverter.Instance}}" x:Name="IP"></TextBox>
+                        <TextBox Width="150" Text="{Binding Ip}" x:Name="IP"></TextBox>
                     </StackPanel>
                     <StackPanel Orientation="Horizontal" Margin="20 0">
                         <TextBlock Text="对方端口: " VerticalAlignment="Center" />
